--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <div class="image-container">
-        <img src="images/coming_soon.jpg" alt="Description of Image" class="fullscreen-image">
-        <img src="images/Sabhah_Kuwait.jpg" alt="Top Left Image" class="top-left-image">
+        <img src="images/Sabah_ComingSoon.png" alt="Description of Image" class="fullscreen-image">
     </div>
 </body>
 
