image changed to html and css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project</title>
+    <title>Coming Soon</title>
+    <!-- Add Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="image-container">
-        <img src="images/Sabah_ComingSoon.png" alt="Description of Image" class="fullscreen-image">
+    <div class="container">
+        <!-- Logo -->
+        <div class="logo">
+            <img src="images/Sabah_logo.png" alt="Sabah Logo">
+        </div>
+
+        <!-- Text Section -->
+        <div class="text">
+            <h3>Best Climate Control Solutions in Kuwait</h3>
+            <h1 class="comingsoon">Coming Soon</h1>
+            <h1 class="serving">to serve you</h1>
+        </div>
+
+        <!-- Illustration -->
+        <div class="illustration">
+            <img src="images/waiting_clock.png" alt="Illustration">
+        </div>
+
+        <!-- Footer -->
+        <text class="watermark">
+            <p>©Luminous Logics 2K24</p>
+        </text>
+
+        <div class="vector">
+            <img src="images/Vector.png" alt="Illustration">
+        </div>
+
+        <div class="vector1">
+            <img src="images/Vector_1.png" alt="Illustration">
+        </div>
     </div>
 </body>
 
